# spindle

./: .gitignore  CODEX_HARNESS.md  CONTRIBUTING.md  FOSS_TODO.md  LICENSE  README.md  pyproject.toml  spindle-wrapper.sh  spindle.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.skein/: config.json
.skein/data/roster/: agents.json
.skein/data/threads/: thread-20251129-wb5f.json
docs/: CODEX_SETUP.md  MULTI_HARNESS_GUIDE.md
examples/: com.spindle.server.plist  spindle.service
spindle/: __init__.py
spindle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py  test_spindle.py
