[project]
name = "spindle-mcp"
version = "1.0.0"
description = "MCP server for Claude Code to Claude Code delegation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "claude", "claude-code", "agent", "delegation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/smythp/spindle"
Repository = "https://github.com/smythp/spindle"
Issues = "https://github.com/smythp/spindle/issues"

[project.scripts]
spindle = "spindle:main"

[tool.setuptools]
packages = ["spindle"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by line-length

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
